Add links in the footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
       <title>Forecast app</title>
     </head>
     <body>
-      Hello World
+      <h1>Hello World</h1>
+      <footer>
+        Coded by
+        <a href="https://github.com/domsmutku" target="_blank"
+          >Natalia Zientek</a
+        >, code hosted on
+        <a
+          href="https://github.com/domsmutku/weather-forecast-app"
+          target="_blank"
+          >Github</a
+        >, website hosted on
+        <a href="https://storm-in-a-teacup.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
     </body>
   </html>
 </html>
