--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
       <title>Forecast app</title>
     </head>
     <body>
-      <h1>Hello World</h1>
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Wrocław</h1>
+          <p>
+            Friday 16:05, sunny
+            <br />
+            Humidity: 30%, Wind: 27km/h
+          </p>
+        </div>
+        <div>🌞 31°C</div>
+      </main>
       <footer>
         Coded by
         <a href="https://github.com/domsmutku" target="_blank"
           >Natalia Zientek</a
-        >, code hosted on
+        >, open-sourced on
         <a
           href="https://github.com/domsmutku/weather-forecast-app"
           target="_blank"
