Style colours and fonts

--- a/index.html
+++ b/index.html
@@ -8,37 +8,59 @@
       <title>Forecast app</title>
     </head>
     <body>
-      <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" value="Search" />
-        </form>
-      </header>
-      <main>
-        <div>
-          <h1>Wrocław</h1>
-          <p>
-            Friday 16:05, sunny
-            <br />
-            Humidity: 30%, Wind: 27km/h
-          </p>
-        </div>
-        <div>🌞 31°C</div>
-      </main>
-      <footer>
-        Coded by
-        <a href="https://github.com/domsmutku" target="_blank"
-          >Natalia Zientek</a
-        >, open-sourced on
-        <a
-          href="https://github.com/domsmutku/weather-forecast-app"
-          target="_blank"
-          >Github</a
-        >, website hosted on
-        <a href="https://storm-in-a-teacup.netlify.app/" target="_blank"
-          >Netlify</a
-        >
-      </footer>
+      <div class="container">
+        <header>
+          <form>
+            <input type="search" placeholder="Enter a city..." required />
+            <input type="submit" value="Search" />
+            <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link
+              rel="preconnect"
+              href="https://fonts.gstatic.com"
+              crossorigin
+            />
+            <link
+              href="https://fonts.googleapis.com/css2?family=Asimovian&display=swap"
+              rel="stylesheet"
+            />
+            <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link
+              rel="preconnect"
+              href="https://fonts.gstatic.com"
+              crossorigin
+            />
+            <link
+              href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
+              rel="stylesheet"
+            />
+          </form>
+        </header>
+        <main>
+          <div>
+            <h1>Wrocław</h1>
+            <p>
+              Friday 16:05, sunny
+              <br />
+              Humidity: 30%, Wind: 27km/h
+            </p>
+          </div>
+          <div>🌞 31°C</div>
+        </main>
+        <footer>
+          Coded by
+          <a href="https://github.com/domsmutku" target="_blank"
+            >Natalia Zientek</a
+          >, open-sourced on
+          <a
+            href="https://github.com/domsmutku/weather-forecast-app"
+            target="_blank"
+            >Github</a
+          >, website hosted on
+          <a href="https://storm-in-a-teacup.netlify.app/" target="_blank"
+            >Netlify</a
+          >
+        </footer>
+      </div>
     </body>
   </html>
 </html>
