--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
     <body>
       <div class="container">
         <header>
-          <form>
-            <input type="search" placeholder="Enter a city..." required />
-            <input type="submit" value="Search" />
+          <form class="search-form">
+            <input
+              type="search"
+              placeholder="Enter a city..."
+              class="search-form-input"
+              required
+            />
+            <input type="submit" value="Search" class="submit-form-input" />
           </form>
         </header>
         <main>
