Add and style flex box

--- a/index.html
+++ b/index.html
@@ -33,15 +33,21 @@
           </form>
         </header>
         <main>
-          <div>
-            <h1>Wrocław</h1>
-            <p>
-              Friday 16:05, sunny
-              <br />
-              Humidity: 30%, Wind: 27km/h
-            </p>
+          <div class="weather-data">
+            <div>
+              <h1 class="current-city">Wrocław</h1>
+              <p class="current-weather-details">
+                Friday 16:05, <strong>sunny</strong>
+                <br />
+                Humidity: <strong>30%</strong>, Wind: <strong>27km/h</strong>
+              </p>
+            </div>
+            <div class="temperature-details">
+              <div class="temperature-emoji">🌞</div>
+              <div class="current-temperature">31</div>
+              <div class="weather-unit">°C</div>
+            </div>
           </div>
-          <div>🌞 31°C</div>
         </main>
         <footer>
           Coded by
