--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <body>
       <div class="container">
         <header>
-          <form class="search-form">
+          <form class="search-form" id="search-form">
             <input
               type="search"
               placeholder="Enter a city..."
               class="search-form-input"
+              id="search-form-input"
               required
             />
             <input type="submit" value="Search" class="submit-form-input" />
@@ -35,7 +36,7 @@
         <main>
           <div class="weather-data">
             <div>
-              <h1 class="current-city">Wrocław</h1>
+              <h1 class="current-city" id="current-city">Wrocław</h1>
               <p class="current-weather-details">
                 Friday 16:05, <strong>sunny</strong>
                 <br />
