--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet"
       />
+      <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
       <title>Forecast app</title>
     </head>
     <body>
