--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <main>
           <div class="weather-data">
             <div>
-              <h1 class="current-city" id="current-city">Wrocław</h1>
+              <h1 class="current-city" id="city"></h1>
               <p class="current-weather-details">
                 Friday 16:05, <strong>sunny</strong>
                 <br />
@@ -46,7 +46,7 @@
             </div>
             <div class="temperature-details">
               <div class="temperature-emoji">🌞</div>
-              <div class="current-temperature">31</div>
+              <div class="current-temperature" id="temperature">31</div>
               <div class="weather-unit">°C</div>
             </div>
           </div>
