Add specific weather data

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             <div>
               <h1 class="current-city" id="city"></h1>
               <p class="current-weather-details">
-                Friday 16:05, <strong>sunny</strong>
+                <span id="time"></span>,
+                <strong><span id="description"></span></strong>
                 <br />
-                Humidity: <strong>30%</strong>, Wind: <strong>27km/h</strong>
+                Humidity: <strong><span id="humidity"></span></strong>, Wind:
+                <strong><span id="wind-speed"></span></strong>
               </p>
             </div>
             <div class="temperature-details">
