--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </p>
             </div>
             <div class="temperature-details">
-              <div class="temperature-emoji">🌞</div>
+              <div class="temperature-emoji" id="emoji">🌞</div>
               <div class="current-temperature" id="temperature">31</div>
               <div class="weather-unit">°C</div>
             </div>
